# MathLibrary

./: .gitignore  CMakeLists.txt  MathLibrary.sln  MathLibrary.vcxproj  MathLibrary.vcxproj.filters
include/: Term.h  Term.hpp  TermParser.h  TermParser.hpp  Value.h  Value.hpp  Varable.h  Varable.hpp
src/: MathLibrary.cpp  Term.cpp  TermParser.cpp  Value.cpp  Varable.cpp
